--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
   <meta name="description" content="Shotto: An Ai Powered Browser Extension to Identify False News">
 
-  <meta name="copyright" content="Team Prodigy, https://www.macodeid.com/">
+  <meta name="copyright" content="Team Prodigy">
 
   <title>Shotto</title>
+
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 
@@ -25,6 +30,19 @@
 
   <link rel="stylesheet" href="./assets/css/mobster.css">
 
+
+<style>
+  .btn-primary{
+    background-color: #07B89D;
+    font-weight: bold;
+  }
+  .btn-dark{
+    font-weight: bold;
+  }
+  .btn-primary:hover{
+    background-color: #007C67;
+  }
+</style>
 </head>
 
 <body>
@@ -46,7 +64,7 @@
         </ul>
         <div class="ml-auto my-2 my-lg-0">
           <a href="https://github.com/zarif25/Shotto-Extension" target="_blank"
-            class="btn btn-dark rounded-pill btn btn-primary">Download Now</a>
+            class="btn btn-dark rounded-pill">Download Now</a>
         </div>
       </div>
     </div>
@@ -57,11 +75,11 @@
       <div class="container h-100">
         <div class="row align-items-center h-100">
           <div class="col-lg-6 wow fadeInUp">
-            <div class="badge mb-2"><span class="icon mr-1"><span class="mai-globe"></span></span>আমাদের তথ্য, আপনার
-              সত্য।</div>
-            <h1 class="mb-4">Identify Fake news and Misinformation using <a style="color: #81F2A9;">Shotto</a></h1>
-            <p class="mb-4">Shotto is a browser extension that fact-checks news and sensetive information in real-time
-              and analyses biases using Machine Learning.</p>
+            <div class="badge mb-2" style="font-family: 'Hind Siliguri', sans-serif; font-size: 20px;">আমাদের তথ্য, আপনার
+              সত্য</div>
+            <h1 class="mb-4">Identify Fake news and Misinformation using <a style="color: #07B89D; font-weight: bold;">Shotto</a></h1>
+            <p class="mb-4">Shotto is a browser extension that fact-checks news and sensitive information in real-time
+              and analyzes biases using Machine Learning.</p>
             <a href="https://github.com/zarif25/Shotto-Extension" target="_blank"
               class="btn btn-primary rounded-pill">Get Extension Now</a>
           </div>
@@ -90,7 +108,7 @@
           <div class="col-lg-6 py-3 mt-lg-5">
             <div class="iconic-list">
               <div class="iconic-item wow fadeInUp">
-                <div class="iconic-md iconic-text bg-warning fg-white rounded-circle">
+                <div class="iconic-md iconic-text bg-warning fg-white rounded-circle" style="background-color: #91FAAB!important;">
                   <span class="mai-cube"></span>
                 </div>
                 <div class="iconic-content">
@@ -100,7 +118,7 @@
                 </div>
               </div>
               <div class="iconic-item wow fadeInUp">
-                <div class="iconic-md iconic-text bg-info fg-white rounded-circle">
+                <div class="iconic-md iconic-text bg-info fg-white rounded-circle" style="background-color: #4DD9A4!important;">
                   <span class="mai-shield"></span>
                 </div>
                 <div class="iconic-content">
@@ -111,7 +129,7 @@
                 </div>
               </div>
               <div class="iconic-item wow fadeInUp">
-                <div class="iconic-md iconic-text bg-indigo fg-white rounded-circle">
+                <div class="iconic-md iconic-text bg-indigo fg-white rounded-circle" style="background-color: #02B69C!important;">
                   <span class="mai-desktop-outline"></span>
                 </div>
                 <div class="iconic-content">
@@ -131,15 +149,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 offset-lg-1 py-3 mt-lg-5 wow fadeInUp">
-            <h1 class="mb-4">Ecommerce business opperate easilly</h1>
+            <h1 class="mb-4">How It Works</h1>
             <p class="mb-4">Shotto keeps you safe from fake news and misinformation not only in social media but also
               gives you the bias, accuracy data, comparable articles, authenticity score and relevant sources so you can
-              be the judge. Thus living upto the title: আমাদের তথ্য, আপনার সত্য। </p>
+              be the judge. Thus living upto the title: <span style="font-family: 'Hind Siliguri', sans-serif;">আমাদের তথ্য, আপনার সত্য</span> </p>
             <p>Shotto Also Boasts a plathera of other premium features offered in our Premium packages. Which include
               Vlulgar speech and toxicity identification in social media and immediate censoring. Anti-Phishing,
               Anti-Spam and Ad free experience.</p>
-            <a href="https://github.com/zarif25/Shotto-Extension" target="_blank"
-              class="btn btn-outline-primary rounded-pill">How it works</a>
           </div>
           <div class="col-lg-5 py-3">
             <div class="img-place mobile-preview shadow wow zoomIn">
@@ -209,7 +225,7 @@
           <p class="mb-5">Shotto Also Boasts a plathera of other premium features that are offered in our Premium
             packages. Which include Vlulgar speech and toxicity identification in social media and immediate censoring.
             Anti-Phishing, Anti-Spam and Ad free experience.</p>
-          <a href="mailto:shotto.inquiries@golapi.net" class="btn btn-gradient btn-split-icon rounded-pill">
+          <a href="mailto:shotto.inquiries@golapi.net" class="btn btn-primary btn-split-icon rounded-pill">
             <span class="icon mai-call-outline"></span> Custom Plan
           </a>
         </div>
@@ -218,7 +234,7 @@
             <div class="pricing-item active wow zoomIn">
               <div class="pricing-header">
                 <h5>Premium Plan</h5>
-                <h1 class="fw-normal">200 Taka</h1>
+                <h1 class="fw-normal" style="color: #07B89D; font-weight: 500!important">200 Taka</h1>
               </div>
               <div class="pricing-body">
                 <ul class="theme-list">
@@ -258,13 +274,11 @@
     <div class="container fg-white">
       <div class="row">
         <div class="col-md-8 col-lg-6 offset-lg-1 wow fadeInUp">
-          <h2 class="mb-5 fg-white fw-normal">Support</h2>
+          <h2 class="mb-5 fg-white fw-normal" style="font-weight: bold!important;">Browser Support</h2>
           <p class="fs-large font-italic">Shotto supports Google Chrome, Microsoft Edge, Brave, Opera GX, Vivaldi, Kiwi
             and Yandex. The Extension can run even on android phones using Kiwi and Yandex browsers.</p>
           <p class="fs-large fg-grey fw-medium mb-5">Courtesy of the Developers at Shotto</p>
 
-          <a href="#" class="btn btn-outline-light rounded-pill">Read Stories <span
-              class="mai-chevron-forward"></span></a>
         </div>
       </div>
     </div>
@@ -279,12 +293,11 @@
           </div>
         </div>
         <div class="col-lg-5 py-3">
-          <h1 class="wow fadeInUp">Need a help? <br>
-            Don't worry just contact us</h1>
+          <h1 class="wow fadeInUp">Contact Us</h1>
 
           <form method="POST" class="mt-5">
             <div class="form-group wow fadeInUp">
-              <label for="name" class="fw-medium fg-grey">Fullname</label>
+              <label for="name" class="fw-medium fg-grey">Name</label>
               <input type="text" class="form-control" id="name">
             </div>
 
